Alignment of Links and Newsletter Resolved

--- a/footer.css
+++ b/footer.css
@@ -8,7 +8,7 @@ footer {
   height: auto;
   width: 100vw;
   /* border: 1px solid black; */
-  height: 60vh;
+  height: 80vh;
   margin: 0;
 }
 
@@ -19,22 +19,20 @@ footer {
 
 .footer-content {
   display: flex;
-
-  justify-content: space-between; /* Use space-between for horizontal alignment */
-
   justify-content: space-evenly;
-
   align-items: flex-start;
   padding-bottom: 20px;
   border-bottom: 1px solid #eaeaea;
   /* border:1px solid black; */
   width:100%;
+
 }
 
 .footer-section {
   flex: 1;
   /* border:1px solid black; */
   /* margin: 0 15px; */
+
 }
 
 .footer-section h3 {
@@ -55,11 +53,13 @@ footer {
   padding: 0;
   display: flex; /* Change to flex for horizontal layout */
   flex-wrap: wrap; /* Allow wrapping */
+  flex-direction: column;
   justify-content: space-between; /* Space items evenly */
 }
 
 .footer-section ul li {
-  margin: 0 10px; /* Horizontal margin between links */
+  /* margin: 0 10px; Horizontal margin between links */
+  margin:5px 0;
 }
 
 .footer-section ul li a {
@@ -78,6 +78,7 @@ footer {
 .newsletter form {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -116,6 +117,7 @@ footer {
   margin-top: 20px; /* Add margin to prevent overlap */
   /* border:5px solid red; */
   color:white;
+  height:100px;
 }
 
 .footer-bottom p {
