--- a/visi.css
+++ b/visi.css
@@ -4,7 +4,7 @@
     width: 250px;
     color: #333; /* Darker text for better contrast */
     font-weight: 700;
-    margin-left:45%;
+    margin-left:42%;
     font-size: 20px;
     text-align: center;
     display: flex;
